Finalizado o layout básico

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Cuidados Femininos</title>
-
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fauna+One&family=Noto+Sans:wght@500&display=swap');
+    </style>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -29,16 +31,22 @@
         
         <div class="hero-carousel">
             <div class="hero-slide">
-                <img src="slide1.jpg" alt="Slide 1">
+                <img src="amardivasfig1.jpeg" alt="Slide 1">
             </div>
             <div class="hero-slide">
-                <img src="slide2.jpg" alt="Slide 2">
+                <img src="amardivasfig2.jpeg" alt="Slide 2">
             </div>
             <div class="hero-slide">
-                <img src="slide3.jpg" alt="Slide 3">
+                <img src="amardivasfig3.jpeg" alt="Slide 3">
             </div>
             <div class="hero-slide">
-                <img src="slide4.jpg" alt="Slide 4">
+                <img src="amardivasfig4.jpeg" alt="Slide 4">
+            </div>
+            <div class="hero-slide">
+                <img src="amardivasfig5.jpeg" alt="Slide 4">
+            </div>
+            <div class="hero-slide">
+                <img src="amardivasfig6.jpeg" alt="Slide 4">
             </div>
         </div>
         <div class="hero-content">
@@ -51,15 +59,15 @@
     <section class="features">
         <div class="feature">
             <h2>Produtos de Qualidade</h2>
-            <p>Nossos produtos são cuidadosamente selecionados para proporcionar os melhores resultados.</p>
+            <p>Nossos produtos são cuidadosamente selecionados <br> proporcionar os melhores resultados.</p>
         </div>
         <div class="feature">
             <h2>Dicas e Truques</h2>
-            <p>Confira nosso blog para dicas de beleza, saúde e bem-estar.</p>
+            <p>Confira nosso blog para dicas de beleza,<br>saúde e bem-estar.</p>
         </div>
         <div class="feature">
             <h2>Atendimento Personalizado</h2>
-            <p>Nossa equipe está pronta para atender suas necessidades individuais.</p>
+            <p>Nossa equipe está pronta para atender <br> suas necessidades individuais.</p>
         </div>
     </section>
 
