--- a/template03/index.html
+++ b/template03/index.html
@@ -149,8 +149,8 @@
     </div>
   </section>
 
-  <section class="meditation-section set-bg" data-setbg="img/meditation-bg.png"
-    style="background-image: url(&quot;img/meditation-bg.png&quot;);">
+  <section class="meditation-section set-bg" data-setbg="assets/images/meditation-bg.png"
+    style="background-image: url(&quot;assets/images/meditation-bg.png&quot;);">
     <div class="container">
       <div class="row">
         <div class="col-lg-7">
@@ -234,11 +234,11 @@
 
   <section class="testimonial-section spad set-bg" data-setbg="img/testimonial-bg.jpg"
     style="background-image: url(&quot;img/testimonial-bg.jpg&quot;);">
-    <img src="./Namaste - Yoga HTML Template_files/testimonial-img-1.png" class="testimonial-img-1" alt="">
-    <img src="./Namaste - Yoga HTML Template_files/testimonial-img-2.png" class="testimonial-img-2" alt="">
+    <img src="assets/images/testimonial-img-1.png" class="testimonial-img-1" alt="">
+    <img src="assets/images/testimonial-img-2.png" class="testimonial-img-2" alt="">
     <div class="container">
       <div class="sp-title text-white text-center">
-        <img src="./Namaste - Yoga HTML Template_files/quota.png" alt="">
+        <img src="assets/images/quota.png" alt="">
         <span>Iniciante &amp; Avançado</span>
         <h4>Meditation Sessions</h4>
       </div>
@@ -267,12 +267,12 @@
           <div class="contact-box contact-text">
             <div class="sp-title">
               <span>Iniciante &amp; Avançado</span>
-              <h4>Meditation Sessions</h4>
+              <h4>Sessões de Meditação</h4>
             </div>
             <p>Etiam pretium, nibh vitae varius ultricies, tellus diam gravida elit, vel rhoncus eros eros sit amet
               ipsum. Cras cursus pellentesque tortor. Ut pellentesque auctor lorem, at maximus lacus faucibus nec.
               Interdum et malesuada fames ac ante ipsum primis in faucibus. </p>
-            <h6>Information</h6>
+            <h6>Informações</h6>
             <ul>
               <li>Main Str, no 23, New York</li>
               <li>+546 990221 123</li>
@@ -286,7 +286,6 @@
 
   <div class="gallery-section">
     <div class="gallery-slider owl-carousel owl-loaded owl-drag">
-
       <div class="owl-stage-outer">
         <div class="owl-stage"
           style="transform: translate3d(-1519px, 0px, 0px); transition: all 0s ease 0s; width: 4558px;">
@@ -302,112 +301,110 @@
           </div>
           <div class="owl-item cloned" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/3.jpg" alt="">
+              <img src="assets/images/3.jpg" alt="">
             </div>
           </div>
           <div class="owl-item cloned" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/4.jpg" alt="">
+              <img src="assets/images/4.jpg" alt="">
             </div>
           </div>
           <div class="owl-item cloned" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/5.jpg" alt="">
+              <img src="assets/images/5.jpg" alt="">
             </div>
           </div>
           <div class="owl-item active" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/1.jpg" alt="">
+              <img src="assets/images/1.jpg" alt="">
             </div>
           </div>
           <div class="owl-item active" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/2.jpg" alt="">
+              <img src="assets/images/2.jpg" alt="">
             </div>
           </div>
           <div class="owl-item active" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/3.jpg" alt="">
+              <img src="assets/images/3.jpg" alt="">
             </div>
           </div>
           <div class="owl-item active" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/4.jpg" alt="">
+              <img src="assets/images/4.jpg" alt="">
             </div>
           </div>
           <div class="owl-item active" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/5.jpg" alt="">
+              <img src="assets/images/5.jpg" alt="">
             </div>
           </div>
           <div class="owl-item cloned" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/1.jpg" alt="">
+              <img src="assets/images/1.jpg" alt="">
             </div>
           </div>
           <div class="owl-item cloned" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/2.jpg" alt="">
+              <img src="assets/images/2.jpg" alt="">
             </div>
           </div>
           <div class="owl-item cloned" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/3.jpg" alt="">
+              <img src="assets/images/3.jpg" alt="">
             </div>
           </div>
           <div class="owl-item cloned" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/4.jpg" alt="">
+              <img src="assets/images/4.jpg" alt="">
             </div>
           </div>
           <div class="owl-item cloned" style="width: 303.84px;">
             <div class="gallery-item">
-              <img src="./Namaste - Yoga HTML Template_files/5.jpg" alt="">
+              <img src="assets/images/5.jpg" alt="">
             </div>
           </div>
         </div>
       </div>
-      <div class="owl-nav disabled"><button type="button" role="presentation" class="owl-prev"><span
-            aria-label="Previous">‹</span></button><button type="button" role="presentation" class="owl-next"><span
-            aria-label="Next">›</span></button></div>
+      <div class="owl-nav disabled">
+        <button type="button" role="presentation" class="owl-prev">
+          <span aria-label="Previous">‹</span>
+        </button>
+        <button type="button" role="presentation" class="owl-next">
+          <span aria-label="Next">›</span>
+        </button>
+      </div>
       <div class="owl-dots disabled"></div>
     </div>
   </div>
 
-
   <footer class="footer-section">
     <div class="contaienr text-center">
-      <p><img src="./Namaste - Yoga HTML Template_files/footer-icon.png" alt="">
+      <p><img src="assets/images/footer-icon.png" alt="">
         Copyright ©
-        <script>document.write(new Date().getFullYear());</script>2023 All rights reserved | This template is made with
+        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
         <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com/" target="_blank">Colorlib</a>
-
       </p>
     </div>
   </footer>
 
-
-  <script src="./Namaste - Yoga HTML Template_files/jquery-3.2.1.min.js.download"></script>
+  <script src="assets/js/jquery-3.2.1.min.js.download"></script>
   <script src="./Namaste - Yoga HTML Template_files/bootstrap.min.js.download"></script>
   <script src="./Namaste - Yoga HTML Template_files/jquery.slicknav.min.js.download"></script>
   <script src="./Namaste - Yoga HTML Template_files/owl.carousel.min.js.download"></script>
   <script src="./Namaste - Yoga HTML Template_files/circle-progress.min.js.download"></script>
   <script src="./Namaste - Yoga HTML Template_files/main.js.download"></script>
 
-  <script async="" src="./Namaste - Yoga HTML Template_files/js(1)"></script>
+  <script async="" src="assets/js/js(1)"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'UA-23581568-13');
   </script>
-  <script defer="" src="./Namaste - Yoga HTML Template_files/v8b253dfea2ab4077af8c6f58422dfbfd1689876627854"
+  <script defer="" src="assets/js/v8b253dfea2ab4077af8c6f58422dfbfd1689876627854"
     integrity="sha512-bjgnUKX4azu3dLTVtie9u6TKqgx29RBwfj3QXYt5EKfWM/9hPSAI/4qcV5NACjwAo8UtTeWefx6Zq5PHcMm7Tg=="
     data-cf-beacon="{&quot;rayId&quot;:&quot;7f4bca617c5d1b1b&quot;,&quot;version&quot;:&quot;2023.7.0&quot;,&quot;b&quot;:1,&quot;token&quot;:&quot;cd0b4b3a733644fc843ef0b185f98241&quot;,&quot;si&quot;:100}"
     crossorigin="anonymous"></script>
-
-
 </body>
-
 </html>
