Ajuste de alguns pontos do layout
Ajuste de alguns pontos do layout tentar fazer o design caber em uma página.
commit manual

--- a/Template01/pages/index.html
+++ b/Template01/pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
     <title>Cuidados Femininos</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fauna+One&family=Noto+Sans:wght@500&display=swap');
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <div class="logo"><img src="amardivaslogo.jfif"/> </div>
+            <div class="logo"><img src="../assets/images/amardivaslogo.jfif"/></div>
             <ul class="nav-links">
                 <li><a href="#">Início</a></li>
                 <li><a href="#">Produtos</a></li>
@@ -31,22 +31,22 @@
         
         <div class="hero-carousel">
             <div class="hero-slide">
-                <img src="amardivasfig1.jpeg" alt="Slide 1">
+                <img src="../assets/images/amardivasfig1.jpeg" alt="Slide 1">
             </div>
             <div class="hero-slide">
-                <img src="amardivasfig2.jpeg" alt="Slide 2">
+                <img src="../assets/images/amardivasfig2.jpeg" alt="Slide 2">
             </div>
             <div class="hero-slide">
-                <img src="amardivasfig3.jpeg" alt="Slide 3">
+                <img src="../assets/images/amardivasfig3.jpeg" alt="Slide 3">
             </div>
             <div class="hero-slide">
-                <img src="amardivasfig4.jpeg" alt="Slide 4">
+                <img src="../assets/images/amardivasfig4.jpeg" alt="Slide 4">
             </div>
             <div class="hero-slide">
-                <img src="amardivasfig5.jpeg" alt="Slide 4">
+                <img src="../assets/images/amardivasfig5.jpeg" alt="Slide 4">
             </div>
             <div class="hero-slide">
-                <img src="amardivasfig6.jpeg" alt="Slide 4">
+                <img src="../assets/images/amardivasfig6.jpeg" alt="Slide 4">
             </div>
         </div>
         <div class="hero-content">
