--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template Responsivo</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        body {
-            margin: 0;
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fauna+One&family=Noto+Sans:wght@500&display=swap');
+    </style>
+        <title>Template Responsivo</title>
+        <link rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <style>
+       html, body {
+            height: 100vh;
+            overflow-x: hidden;
+            font-family: "Noto Sans", sans-serif;
+            margin: 0px;
             padding: 0;
+            margin: auto;
+
+        }
+        .colored-word {
+            color: #ba5c3f; /* Cor vermelha */
         }
 
         .header {
-
+            background-color: #1d664b;
             /* text-align: center; */
-            padding: 20px;
+            padding: 0px;
         }
 
         .logo {
@@ -23,8 +35,8 @@
         }
 
         .step {
-            border-top: 1px solid #e0e0e0;
-            margin-top: 10px;
+            border-top: 1px solid #ffe0e0;
+            margin-top: 0px;
             padding-top: 10px;
             text-align: center;
         }
@@ -36,26 +48,50 @@
             height: 80vh;
         }
 
+        .background-image .container {
+            max-width: 90%; /* Defina a largura máxima para 100% */
+        }
+
         .footer {
-            background-color: #242329;
-            padding: 20px;
-            text-align: center;
+            background-color: #333332;
+            /*padding: 10px 10px;*/
+            margin-top: 0px;
+            text-align: left;
+            height: 25vh;
         }
 
         .footer-logo {
-            width: 100px;
-            margin-bottom: 10px;
+            width: 120px;
+            margin-bottom: 85px;
+            margin-top: 0px;
+            padding: 2px;
         }
 
         .rounded-input {
-            border-radius: 20px;
+            background-color: #242329;
+            border-radius: 15px;
             border: 1px solid #ccc;
-            padding: 10px;
-            width: 70%;
+            padding: 8px;
+            max-width: 350px;
+            width: 100%;
+            top: 69px;
+            color: #ccc; /* Adicionei a cor do texto */
+        }
+
+        .rounded-input::placeholder{
+            color: #ccc;
         }
 
         .subscribe-button {
-            margin-top: 10px;
+            max-height: 50px;
+            max-width: 175px;
+            width: 100%;
+            border-radius: 20px;
+            background-color: #d1d1ff;
+            color: #d08b67;
+            border: none;
+            margin-left: 50px;
+            padding: 5px 15px;
         }
 
         .round-buttons {
@@ -66,86 +102,189 @@
         }
 
         .round-button {
-            background-color: #ff0000;
+            
             width: 100px;
             height: 100px;
             border-radius: 50%;
-            margin: 0 10px;
+            margin: 0 0px;
             margin-bottom: 10px;
         }
 
         .round-button img {
-            max-width: 60px;
-            max-height: 60px;
+            max-width: 100px;
+            max-height: 100px;
+            border-radius: 50%;
             margin: auto;
             display: block;
         }
 
         .text-section {
-            margin-top: 20px;
+            margin-top: 52px;
             color: white;
+            font-family: "Noto Sans", sans-serif;
+            font-size: larger;
         }
 
         .circle-logo {
             width: 100px;
             height: 100px;
             border-radius: 50%;
-            margin: 20px auto;
+            margin: 10px 45px;
+        }
+
+        .text-subscribe-button{
+            max-height: 80px;
+            max-width: 300px;
+            width: 100%;
+            border-radius: 20px;
+            background-color: #1d664b;
+            color: #d1d1ff;
+            border: none;
+            margin-left: 150px;
+            padding: 15px 15px;
+            font-size: larger;
+        }
+
+        .footer-round-button img {
+            max-width: 35px;
+            max-height: 35px;
+            margin: auto;
+            display: block;
         }
 
         .subscribe-section {
+            margin-top: 0px;
+            color: #ccc;
+            padding: 0px 10px 00px 50px;
+            font-size: 12px;
+        }
+
+        .redes-sociais {
+            margin-top: 0px;
+            color: #ccc;
+            padding: 0px 0px;
+            font-size: 12px;
+        }
+        footer .direitos{
             text-align: center;
-            margin-top: 20px;
+            margin-top: 2px;
+            font-size: 10px;
         }
     </style>
-</head>
+    </head>
 
-<body>
-    <div class="header">
-        <img src="../images/logo preferencial horizontal- transparente.png" alt="Logo" class="logo">
-    </div>
-    <div class="background-image">
-        <div class="container">
-            <div class="row">
-
-                <div class="col-md-3">
-                    <section>
-                        <div class="round-button">
-                            <img src="path/to/button1.png" alt="Button 1">
-                        </div>
-                        <div class="round-button">
-                            <img src="path/to/button2.png" alt="Button 2">
-                        </div>
-                        <div class="round-button">
-                            <img src="path/to/button3.png" alt="Button 3">
-                        </div>
-                    </section>
-                </div>
-
-                <div class="col-md-4">
-                    <section class="text-section">
-                        <p style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: 25px;">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget nisl ut libero feugiat
-                            posuere. Nulla facilisi.</p>
-                    </section>
-                </div>
-
-                <div class="col-md-5">
-                    <div class="circle-logo">
-                        <img src="path/to/circle-logo.png" alt="Circle Logo">
+    <body>
+        <header><img
+                src="../images/logopreferencialhorizontal-transparente.png"
+                alt="Logo" class="logo"></header>
+        <div class="background-image">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2">
+                        <section>
+                            <div class="round-button">
+                                <img src="../images/06fundotransparente1.png"
+                                    alt="Button 1">
+                            </div>
+                            <div class="round-button">
+                                <img src="../images/01fundotransparente.png"
+                                    alt="Button 2">
+                            </div>
+                            <div class="round-button">
+                                <img src="../images/03fundotransparente1.png"
+                                    alt="Button 3">
+                            </div>
+                        </section>
                     </div>
+
+                    <div class="col-md-6">
+                        <div class="text-section">
+                            <p><span class="colored-word"> Junte-se nós</span> e
+                                transforme sua <span class="colored-word">inscrição</span>
+                                em um ato de amor por você e pelo nosso planeta.</p>
+                            <p>Sua inscrição no <span class="colored-word">Evento
+                                    <b>Voo da Borboleta: Aprendendo a Amar-se
+                                        como uma Diva</b> </span>não é apenas um
+                                passo, é um pacto de <span class="colored-word">amor-próprio</span>
+                                e <span class="colored-word">sustentabilidade.</span></p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="circle-logo">
+                            <img
+                                src="../images/selo-emblema2-transparente.png"
+                                alt="Circle Logo">
+                        </div>
+                    </div>
+                </div>
+                <div class="roww">
+                    <button class="text-subscribe-button">Inscreva-se</button>
                 </div>
             </div>
         </div>
-    </div>
-    <footer class="footer">
-        <img src="../images/logo com tagline- transparente.png" alt="Footer Logo" class="footer-logo">
-        <input type="text" class="rounded-input" placeholder="Seu e-mail">
-        <button class="subscribe-button">Inscreva-se</button>
-        <div class="subscribe-section">
-            <button class="btn btn-primary">Inscreva-se</button>
-        </div>
-    </footer>
-</body>
+        <footer class="footer">
+            <div class="row align-items-center">
+                <!-- Alinhar itens verticalmente -->
+                <div class="col-md-2">
+                    <img src="../images/logohorizontal-transparente1.png"
+                        alt="Footer Logo" class="footer-logo">
+                </div>
+                <div class="col-md-9">
+                    <div class="subscribe-section">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <p style="color: white; width: max-content;">Junte-se
+                                    ao nosso Newsletter e receba novidades em
+                                    seu e-mail:</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <input type="text" class="rounded-input"
+                                    placeholder="Seu e-mail">
+                            </div>
+                            <div class="col-md-4">
+                                <button class="subscribe-button">Inscreva-se</button>
+                            </div>
+                            <div class="col-md-1"></div>
+                            <div class="col-md-3">
+                                <div class="redes-sociais">
+                                    <div class="row"><p>Nossas redes sociais</p></div>
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <div class="footer-round-button">
+                                                <img src="../images/Twitter.png"
+                                                    alt="twitter">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="footer-round-button">
+                                                <img src="../images/Whats.png"
+                                                    alt="whattsapp">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="footer-round-button">
+                                                <img
+                                                    src="../images/Instagram.png"
+                                                    alt="instagram">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <p class="direitos">2023® Amar Divas – Todos os
+                                direitos reservados. Endereço eletrônico:
+                                https://www.amardivas.com.br</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
+    </body>
 
 </html>
