correção do text-section

--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -174,8 +174,7 @@
     </head>
 
     <body>
-        <header><img
-                src="../images/logopreferencialhorizontal-transparente.png"
+        <header><img src="../images/logopreferencialhorizontal-transparente.png"
                 alt="Logo" class="logo"></header>
         <div class="background-image">
             <div class="container">
@@ -199,7 +198,7 @@
 
                     <div class="col-md-6">
                         <div class="text-section">
-                            <p><span class="colored-word"> Junte-se nós</span> e
+                            <p><span class="colored-word"> Junte-se a nós</span> e
                                 transforme sua <span class="colored-word">inscrição</span>
                                 em um ato de amor por você e pelo nosso planeta.</p>
                             <p>Sua inscrição no <span class="colored-word">Evento
