acrescentado links para redes sociais

--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -10,167 +10,7 @@
         <title>Template Responsivo</title>
         <link rel="stylesheet"
             href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        <style>
-       html, body {
-            height: 100vh;
-            overflow-x: hidden;
-            font-family: "Noto Sans", sans-serif;
-            margin: 0px;
-            padding: 0;
-            margin: auto;
-
-        }
-        .colored-word {
-            color: #ba5c3f; /* Cor vermelha */
-        }
-
-        .header {
-            background-color: #1d664b;
-            /* text-align: center; */
-            padding: 0px;
-        }
-
-        .logo {
-            width: 150px;
-        }
-
-        .step {
-            border-top: 1px solid #ffe0e0;
-            margin-top: 0px;
-            padding-top: 10px;
-            text-align: center;
-        }
-
-        .background-image {
-            background-image: url(../images/Fundo.png);
-            background-size: cover;
-            background-position: center;
-            height: 80vh;
-        }
-
-        .background-image .container {
-            max-width: 90%; /* Defina a largura máxima para 100% */
-        }
-
-        .footer {
-            background-color: #333332;
-            /*padding: 10px 10px;*/
-            margin-top: 0px;
-            text-align: left;
-            height: 25vh;
-        }
-
-        .footer-logo {
-            width: 120px;
-            margin-bottom: 85px;
-            margin-top: 0px;
-            padding: 2px;
-        }
-
-        .rounded-input {
-            background-color: #242329;
-            border-radius: 15px;
-            border: 1px solid #ccc;
-            padding: 8px;
-            max-width: 350px;
-            width: 100%;
-            top: 69px;
-            color: #ccc; /* Adicionei a cor do texto */
-        }
-
-        .rounded-input::placeholder{
-            color: #ccc;
-        }
-
-        .subscribe-button {
-            max-height: 50px;
-            max-width: 175px;
-            width: 100%;
-            border-radius: 20px;
-            background-color: #d1d1ff;
-            color: #d08b67;
-            border: none;
-            margin-left: 50px;
-            padding: 5px 15px;
-        }
-
-        .round-buttons {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 20px;
-        }
-
-        .round-button {
-            
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            margin: 0 0px;
-            margin-bottom: 10px;
-        }
-
-        .round-button img {
-            max-width: 100px;
-            max-height: 100px;
-            border-radius: 50%;
-            margin: auto;
-            display: block;
-        }
-
-        .text-section {
-            margin-top: 52px;
-            color: white;
-            font-family: "Noto Sans", sans-serif;
-            font-size: larger;
-        }
-
-        .circle-logo {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            margin: 10px 45px;
-        }
-
-        .text-subscribe-button{
-            max-height: 80px;
-            max-width: 300px;
-            width: 100%;
-            border-radius: 20px;
-            background-color: #1d664b;
-            color: #d1d1ff;
-            border: none;
-            margin-left: 150px;
-            padding: 15px 15px;
-            font-size: larger;
-        }
-
-        .footer-round-button img {
-            max-width: 35px;
-            max-height: 35px;
-            margin: auto;
-            display: block;
-        }
-
-        .subscribe-section {
-            margin-top: 0px;
-            color: #ccc;
-            padding: 0px 10px 00px 50px;
-            font-size: 12px;
-        }
-
-        .redes-sociais {
-            margin-top: 0px;
-            color: #ccc;
-            padding: 0px 0px;
-            font-size: 12px;
-        }
-        footer .direitos{
-            text-align: center;
-            margin-top: 2px;
-            font-size: 10px;
-        }
-    </style>
+        <link rel="stylesheet" type="text/css" href="../css/styles.css" />
     </head>
 
     <body>
@@ -253,21 +93,21 @@
                                     <div class="row">
                                         <div class="col-md-4">
                                             <div class="footer-round-button">
-                                                <img src="../images/Twitter.png"
-                                                    alt="twitter">
+                                                <img src="../images/Twitter.png" alt="twitter">
                                             </div>
                                         </div>
                                         <div class="col-md-4">
                                             <div class="footer-round-button">
-                                                <img src="../images/Whats.png"
-                                                    alt="whattsapp">
+                                                <a href="https://api.whatsapp.com/send?phone=5583991415318&text=Olá,%20Diva!" target="_blank">
+                                                    <img src="../images/Whats.png" alt="whattsapp">
+                                                </a>
                                             </div>
                                         </div>
                                         <div class="col-md-4">
                                             <div class="footer-round-button">
-                                                <img
-                                                    src="../images/Instagram.png"
-                                                    alt="instagram">
+                                                <a href="https://www.instagram.com/amardivas/" target="_blank">
+                                                    <img src="../images/Instagram.png" alt="instagram">
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
@@ -275,8 +115,7 @@
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <p class="direitos">2023® Amar Divas – Todos os
-                                direitos reservados. Endereço eletrônico:
+                            <p class="direitos">2023® Amar Divas – Todos os direitos reservados. Endereço eletrônico:
                                 https://www.amardivas.com.br</p>
                         </div>
                     </div>
