Colocado logo tipo facebook deletado twitter

--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -73,9 +73,8 @@
                     <div class="subscribe-section">
                         <div class="row">
                             <div class="col-md-4">
-                                <p style="color: white; width: max-content;">Junte-se
-                                    ao nosso Newsletter e receba novidades em
-                                    seu e-mail:</p>
+                                <p style="color: white; width: max-content;">Junte-se ao nosso Newsletter e
+                                    receba novidades em seu e-mail:</p>
                             </div>
                         </div>
                         <div class="row">
@@ -91,9 +90,16 @@
                                 <div class="redes-sociais">
                                     <div class="row"><p>Nossas redes sociais</p></div>
                                     <div class="row">
-                                        <div class="col-md-4">
+                                        <!-- <div class="col-md-4">
                                             <div class="footer-round-button">
                                                 <img src="../images/Twitter.png" alt="twitter">
+                                            </div>
+                                        </div> -->
+                                        <div class="col-md-4">
+                                            <div class="footer-round-button">
+                                                <a href="https://www.facebook.com/profile.php?id=100085018795190"  target="_blank">
+                                                    <img src="../images/facebook-logo-white.png" alt="facebook">
+                                                </a>
                                             </div>
                                         </div>
                                         <div class="col-md-4">
