--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -1,289 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
         @import url('https://fonts.googleapis.com/css2?family=Fauna+One&family=Noto+Sans:wght@500&display=swap');
     </style>
-        <title>Template Responsivo</title>
-        <link rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        <style>
-       html, body {
-            height: 100vh;
-            overflow-x: hidden;
-            font-family: "Noto Sans", sans-serif;
-            margin: 0px;
-            padding: 0;
-            margin: auto;
+    <title>Amandivas</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
-        }
-        .colored-word {
-            color: #ba5c3f; /* Cor vermelha */
-        }
+</head>
 
-        .header {
-            background-color: #1d664b;
-            /* text-align: center; */
-            padding: 0px;
-        }
-
-        .logo {
-            width: 150px;
-        }
-
-        .step {
-            border-top: 1px solid #ffe0e0;
-            margin-top: 0px;
-            padding-top: 10px;
-            text-align: center;
-        }
-
-        .background-image {
-            background-image: url(../images/Fundo.png);
-            background-size: cover;
-            background-position: center;
-            height: 80vh;
-        }
-
-        .background-image .container {
-            max-width: 90%; /* Defina a largura máxima para 100% */
-        }
-
-        .footer {
-            background-color: #333332;
-            /*padding: 10px 10px;*/
-            margin-top: 0px;
-            text-align: left;
-            height: 25vh;
-        }
-
-        .footer-logo {
-            width: 120px;
-            margin-bottom: 85px;
-            margin-top: 0px;
-            padding: 2px;
-        }
-
-        .rounded-input {
-            background-color: #242329;
-            border-radius: 15px;
-            border: 1px solid #ccc;
-            padding: 8px;
-            max-width: 350px;
-            width: 100%;
-            top: 69px;
-            color: #ccc; /* Adicionei a cor do texto */
-        }
-
-        .rounded-input::placeholder{
-            color: #ccc;
-        }
-
-        .subscribe-button {
-            max-height: 50px;
-            max-width: 175px;
-            width: 100%;
-            border-radius: 20px;
-            background-color: #d1d1ff;
-            color: #d08b67;
-            border: none;
-            margin-left: 50px;
-            padding: 5px 15px;
-        }
-
-        .round-buttons {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 20px;
-        }
-
-        .round-button {
-            
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            margin: 0 0px;
-            margin-bottom: 10px;
-        }
-
-        .round-button img {
-            max-width: 100px;
-            max-height: 100px;
-            border-radius: 50%;
-            margin: auto;
-            display: block;
-        }
-
-        .text-section {
-            margin-top: 52px;
-            color: white;
-            font-family: "Noto Sans", sans-serif;
-            font-size: larger;
-        }
-
-        .circle-logo {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            margin: 10px 45px;
-        }
-
-        .text-subscribe-button{
-            max-height: 80px;
-            max-width: 300px;
-            width: 100%;
-            border-radius: 20px;
-            background-color: #1d664b;
-            color: #d1d1ff;
-            border: none;
-            margin-left: 150px;
-            padding: 15px 15px;
-            font-size: larger;
-        }
-
-        .footer-round-button img {
-            max-width: 35px;
-            max-height: 35px;
-            margin: auto;
-            display: block;
-        }
-
-        .subscribe-section {
-            margin-top: 0px;
-            color: #ccc;
-            padding: 0px 10px 00px 50px;
-            font-size: 12px;
-        }
-
-        .redes-sociais {
-            margin-top: 0px;
-            color: #ccc;
-            padding: 0px 0px;
-            font-size: 12px;
-        }
-        footer .direitos{
-            text-align: center;
-            margin-top: 2px;
-            font-size: 10px;
-        }
-    </style>
-    </head>
-
-    <body>
-        <header><img src="../images/logopreferencialhorizontal-transparente.png"
-                alt="Logo" class="logo"></header>
-        <div class="background-image">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-2">
-                        <section>
-                            <div class="round-button">
-                                <img src="../images/06fundotransparente1.png"
-                                    alt="Button 1">
-                            </div>
-                            <div class="round-button">
-                                <img src="../images/01fundotransparente.png"
-                                    alt="Button 2">
-                            </div>
-                            <div class="round-button">
-                                <img src="../images/03fundotransparente1.png"
-                                    alt="Button 3">
-                            </div>
-                        </section>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="text-section">
-                            <p><span class="colored-word"> Junte-se a nós</span> e
-                                transforme sua <span class="colored-word">inscrição</span>
-                                em um ato de amor por você e pelo nosso planeta.</p>
-                            <p>Sua inscrição no <span class="colored-word">Evento
-                                    <b>Voo da Borboleta: Aprendendo a Amar-se
-                                        como uma Diva</b> </span>não é apenas um
-                                passo, é um pacto de <span class="colored-word">amor-próprio</span>
-                                e <span class="colored-word">sustentabilidade.</span></p>
+<body>
+    <div class="background-image">
+        <div class="container">
+            <header><img src="../images/Marca.png" alt="Logo" class="logo"></header>
+            <div class="row">
+                <div class="col-md-2">
+                    <section>
+                        <div class="round-button">
+                            <img src="../images/06fundotransparente1.png" alt="Button 1">
                         </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="circle-logo">
-                            <img
-                                src="../images/selo-emblema2-transparente.png"
-                                alt="Circle Logo">
+                        <div class="round-button">
+                            <img src="../images/01fundotransparente.png" alt="Button 2">
                         </div>
+                        <div class="round-button">
+                            <img src="../images/03fundotransparente1.png" alt="Button 3">
+                        </div>
+                    </section>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="text-section">
+                        <p><span class="colored-word"> Junte-se a nós</span> e
+                            transforme sua <span class="colored-word">inscrição</span>
+                            em um ato de amor por você e pelo nosso planeta.</p>
+                        <p>Sua inscrição no <span class="colored-word">Evento
+                                <b>Voo da Borboleta: Aprendendo a Amar-se
+                                    como uma Diva</b> </span>não é apenas um
+                            passo, é um pacto de <span class="colored-word">amor-próprio</span>
+                            e <span class="colored-word">sustentabilidade.</span></p>
                     </div>
                 </div>
-                <div class="roww">
-                    <button class="text-subscribe-button">Inscreva-se</button>
+
+                <div class="col-md-4">
+                    <div class="">
+                        <img src="../images/LOGO.png" alt="Circle Logo" class="circle-logo">
+                    </div>
                 </div>
             </div>
+            <div class="row">
+                <button class="text-subscribe-button">Inscreva-se</button>
+            </div>
         </div>
-        <footer class="footer">
-            <div class="row align-items-center">
-                <!-- Alinhar itens verticalmente -->
-                <div class="col-md-2">
-                    <img src="../images/logohorizontal-transparente1.png"
-                        alt="Footer Logo" class="footer-logo">
-                </div>
-                <div class="col-md-9">
-                    <div class="subscribe-section">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <p style="color: white; width: max-content;">Junte-se
-                                    ao nosso Newsletter e receba novidades em
-                                    seu e-mail:</p>
-                            </div>
+    </div>
+    <footer class="footer">
+        <div class="row align-items-center">
+            <!-- Alinhar itens verticalmente -->
+            <div class="col-md-2">
+                <img src="../images/logohorizontal-transparente1.png" alt="Footer Logo" class="footer-logo">
+            </div>
+            <div class="col-md-9">
+                <div class="subscribe-section">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <p style="color: white; width: max-content;">Junte-se
+                                ao nosso Newsletter e receba novidades em
+                                seu e-mail:</p>
                         </div>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <input type="text" class="rounded-input"
-                                    placeholder="Seu e-mail">
-                            </div>
-                            <div class="col-md-4">
-                                <button class="subscribe-button">Inscreva-se</button>
-                            </div>
-                            <div class="col-md-1"></div>
-                            <div class="col-md-3">
-                                <div class="redes-sociais">
-                                    <div class="row"><p>Nossas redes sociais</p></div>
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <div class="footer-round-button">
-                                                <img src="../images/Twitter.png"
-                                                    alt="twitter">
-                                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <input type="text" class="rounded-input" placeholder="Seu e-mail">
+                        </div>
+                        <div class="col-md-4">
+                            <button class="subscribe-button">Inscreva-se</button>
+                        </div>
+                        <div class="col-md-1"></div>
+                        <div class="col-md-3">
+                            <div class="redes-sociais">
+                                <div class="row">
+                                    <p>Nossas redes sociais</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div class="footer-round-button">
+                                            <img src="../images/Twitter.png" alt="twitter">
                                         </div>
-                                        <div class="col-md-4">
-                                            <div class="footer-round-button">
-                                                <img src="../images/Whats.png"
-                                                    alt="whattsapp">
-                                            </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="footer-round-button">
+                                            <img src="../images/Whats.png" alt="whattsapp">
                                         </div>
-                                        <div class="col-md-4">
-                                            <div class="footer-round-button">
-                                                <img
-                                                    src="../images/Instagram.png"
-                                                    alt="instagram">
-                                            </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="footer-round-button">
+                                            <img src="../images/Instagram.png" alt="instagram">
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12">
-                            <p class="direitos">2023® Amar Divas – Todos os
-                                direitos reservados. Endereço eletrônico:
-                                https://www.amardivas.com.br</p>
-                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <p class="direitos">2023® Amar Divas – Todos os
+                            direitos reservados. Endereço eletrônico:
+                            <a href="https://www.amardivas.com.br" target="_blank">https://www.amardivas.com.br</a>
+                        </p>
                     </div>
                 </div>
             </div>
+        </div>
 
-        </footer>
-    </body>
+    </footer>
+</body>
 
 </html>
