recolocado os links

--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -87,17 +87,23 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="footer-round-button">
-                                            <img src="../images/Twitter.png" alt="twitter">
+                                            <a href="https://www.facebook.com/profile.php?id=100085018795190"  target="_blank">
+                                                <img src="../images/facebook-logo-white.png" alt="facebook">
+                                            </a>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="footer-round-button">
-                                            <img src="../images/Whats.png" alt="whattsapp">
+                                            <a href="https://api.whatsapp.com/send?phone=5583991415318&text=Olá,%20Diva!" target="_blank">
+                                                <img src="../images/Whats.png" alt="whattsapp">
+                                            </a>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="footer-round-button">
-                                            <img src="../images/Instagram.png" alt="instagram">
+                                            <a href="https://www.instagram.com/amardivas/" target="_blank">
+                                                <img src="../images/Instagram.png" alt="instagram">
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
