--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -43,6 +42,9 @@
                             passo, é um pacto de <span class="colored-word">amor-próprio</span>
                             e <span class="colored-word">sustentabilidade.</span></p>
                     </div>
+                    <div class="row">
+                        <button class="text-subscribe-button">Inscreva-se</button>
+                    </div>
                 </div>
 
                 <div class="col-md-4">
@@ -51,9 +53,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <button class="text-subscribe-button">Inscreva-se</button>
-            </div>
+           
         </div>
     </div>
     <footer class="footer">
@@ -87,14 +87,16 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="footer-round-button">
-                                            <a href="https://www.facebook.com/profile.php?id=100085018795190"  target="_blank">
+                                            <a href="https://www.facebook.com/profile.php?id=100085018795190"
+                                                target="_blank">
                                                 <img src="../images/facebook-logo-white.png" alt="facebook">
                                             </a>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="footer-round-button">
-                                            <a href="https://api.whatsapp.com/send?phone=5583991415318&text=Olá,%20Diva!" target="_blank">
+                                            <a href="https://api.whatsapp.com/send?phone=5583991415318&text=Olá,%20Diva!"
+                                                target="_blank">
                                                 <img src="../images/Whats.png" alt="whattsapp">
                                             </a>
                                         </div>
