--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -6,10 +7,9 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fauna+One&family=Noto+Sans:wght@500&display=swap');
     </style>
-    <title>Amandivas</title>
+    <title>AmarDivas</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
-
 </head>
 
 <body>
@@ -30,15 +30,14 @@
                         </div>
                     </section>
                 </div>
-
                 <div class="col-md-6">
                     <div class="text-section">
-                        <p><span class="colored-word"> Junte-se a nós</span> e
+                        <p><span class="colored-word">Junte-se a nós</span> e
                             transforme sua <span class="colored-word">inscrição</span>
                             em um ato de amor por você e pelo nosso planeta.</p>
                         <p>Sua inscrição no <span class="colored-word">Evento
-                                <b>Voo da Borboleta: Aprendendo a Amar-se
-                                    como uma Diva</b> </span>não é apenas um
+                                <strong>Voo da Borboleta: Aprendendo a Amar-se
+                                    como uma Diva</strong>&nb</span>não é apenas um
                             passo, é um pacto de <span class="colored-word">amor-próprio</span>
                             e <span class="colored-word">sustentabilidade.</span></p>
                     </div>
@@ -46,14 +45,12 @@
                         <button class="text-subscribe-button">Inscreva-se</button>
                     </div>
                 </div>
-
                 <div class="col-md-4">
                     <div class="">
                         <img src="../images/LOGO.png" alt="Circle Logo" class="circle-logo">
                     </div>
                 </div>
-            </div>
-           
+            </div>           
         </div>
     </div>
     <footer class="footer">
@@ -62,66 +59,65 @@
             <div class="col-md-2">
                 <img src="../images/logohorizontal-transparente1.png" alt="Footer Logo" class="footer-logo">
             </div>
-            <div class="col-md-9">
+            <div class="col-md-7">
                 <div class="subscribe-section">
+                
                     <div class="row">
-                        <div class="col-md-4">
-                            <p style="color: white; width: max-content;">Junte-se
-                                ao nosso Newsletter e receba novidades em
-                                seu e-mail:</p>
+                        <div class="col-md-6">
+                            <p style="color: white; width: max-content;">
+                                Junte-se ao nosso Newsletter e receba novidades em seu e-mail:
+                            </p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-8">
                             <input type="text" class="rounded-input" placeholder="Seu e-mail">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-8">
                             <button class="subscribe-button">Inscreva-se</button>
                         </div>
-                        <div class="col-md-1"></div>
+                    </div>
+                </div>
+            </div>
+            <!--<div class="col-md-1"></div>-->
+            <div class="col-md-3">
+                <div class="redes-sociais">
+                    <div class="row">
+                        <p>Nossas redes sociais</p>
+                    </div>
+                    <div class="row">
                         <div class="col-md-3">
-                            <div class="redes-sociais">
-                                <div class="row">
-                                    <p>Nossas redes sociais</p>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-4">
-                                        <div class="footer-round-button">
-                                            <a href="https://www.facebook.com/profile.php?id=100085018795190"
-                                                target="_blank">
-                                                <img src="../images/facebook-logo-white.png" alt="facebook">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="footer-round-button">
-                                            <a href="https://api.whatsapp.com/send?phone=5583991415318&text=Olá,%20Diva!"
-                                                target="_blank">
-                                                <img src="../images/Whats.png" alt="whattsapp">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="footer-round-button">
-                                            <a href="https://www.instagram.com/amardivas/" target="_blank">
-                                                <img src="../images/Instagram.png" alt="instagram">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="footer-round-button">
+                                <a href="https://www.facebook.com/profile.php?id=100085018795190" target="_blank">
+                                    <img src="../images/facebook-logo-white.png" alt="facebook">
+                                </a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-12">
-                        <p class="direitos">2023® Amar Divas – Todos os
-                            direitos reservados. Endereço eletrônico:
-                            <a href="https://www.amardivas.com.br" target="_blank">https://www.amardivas.com.br</a>
-                        </p>
+                        <div class="col-md-3">
+                            <div class="footer-round-button">
+                                <a href="https://api.whatsapp.com/send?phone=5583991415318&text=Olá,%20Diva!" target="_blank">
+                                    <img src="../images/Whats.png" alt="whattsapp">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="footer-round-button">
+                                <a href="https://www.instagram.com/amardivas/" target="_blank">
+                                    <img src="../images/Instagram.png" alt="instagram">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
+        <div class="row align-items-center">
+            <div class="col-md-12">
+                <p class="direitos">2023® Amar Divas – Todos os direitos reservados. Endereço eletrônico:
+                    <a href="https://www.amardivas.com.br" target="_blank">https://www.amardivas.com.br</a>
+                </p>
+            </div>
+        </div>
     </footer>
 </body>
 
